--- a/catalog-item.html
+++ b/catalog-item.html
@@ -22,7 +22,7 @@
 					<a href="#">Прайс-лист</a>
 					</li>
 					<li>
-					<a href="#">Магазин</a>
+					<a href="catalog.html">Магазин</a>
 					</li>
 					<li>
 					<a href="#">Контакты</a>
@@ -35,24 +35,26 @@
 		</div>
 	</header>
 		<main class="container">
-			<h1>Набор для путешествий "Baxter of California"</h1>
-			<div class="crumbs">
+			<div class="crumbs-item">
+				<h1>Набор для путешествий "Baxter of California"</h1>
+				<div class="crumbs">
 					<a href="#">Главная</a>
 					<a href="#">Магазин</a>
 					<a href="#">Средства для ухода</a>
-					<a href="#">Набор для путешествий "Baxter of California"</a>
+					<span>Набор для путешествий "Baxter of California"</span>
+				</div>
 			</div>
 			<div class="img-main">
 				<img src=""img\product1.png" width="250" height="200">
 			</div>
-			<div class="slaider-img">
+			<div class="slider-img">
 				<img src="img\product1-view1.png" width="100" height="80">
 				<img src="img\product1-view2.png" width="100" height="80">
 				<img src="img\product1-view3.png" width="100" height="80">
 			</div>
 			<div class="description">
 				<span>Есть в наличии</span>
-				<span class="articl">Артикул: Dexter-AE</span> 
+				<span class="article">Артикул: Dexter-AE</span> 
 				<p>Travel kit - необходимый аксессуар во время любого путешествия, в аккуратной кожанной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь, набор также может стать отличным подарком.</p>
 			</div>
 			<div>
@@ -73,10 +75,10 @@
 		<footer class="main-footer">
 			<div class="container">
 				<section class="footer-contacts">
-					<p>Барбершоп "Бородинский"<br>
-					Адрес: Санкт-Петербург, Б.Конюшенная, д.19\8<br>
-					<a href="#">Как нас найти?</a><br>
-					Телефон: +7(812)666-02-66</p>
+					<p>Барбершоп "Бородинский"
+					Адрес: Санкт-Петербург, Б.Конюшенная, д.19\8
+					<a href="#">Как нас найти?</a>
+					<a href="tel:+78126660266">+7(812)666-02-66</a>
 				</section>
 				<section class="footer-social">
 					<p>Давайте дружить!</p>
@@ -87,7 +89,6 @@
 				<section class="footer-copyright">
 					<p>Разработано:</p>
 					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-
 				</section>
 			</div>
 		</footer>
