--- a/catalog.html
+++ b/catalog.html
@@ -8,24 +8,26 @@
 	<header class="main-header">
 		<div class="container">
 			<div class="logo">
-				<img src="img\logo.png" width="120" height="70px">
+				<a href="index.html">
+				<img src="img/logo.png" width="120" height="70px">
+				</a>
 			</div>
 			<nav class="main-navigation">
 				<ul>
 					<li>
-					<a href="#">Информация</a>
+						<a href="#">Информация</a>
 					</li>
 					<li>
-					<a href="#">Новости</a> 
+						<a href="#">Новости</a> 
 					</li>
 					<li>
-					<a href="#">Прайс-лист</a>
+						<a href="#">Прайс-лист</a>
 					</li>
 					<li>
-					<a href="#">Магазин</a>
+						<span>Магазин</span>>
 					</li>
 					<li>
-					<a href="#">Контакты</a>
+						<a href="#">Контакты</a>
 					</li>
 				</ul>
 			</nav>	
@@ -39,114 +41,112 @@
 				<div class="crumbs">
 					<a href="#">Главная</a>
 					<a href="#">Магазин</a>
-					<a href="#">Средства для ухода</a>
+					<span>Средства для ухода</span>>
 				</div>
 			<h2>Производители</h2>
 				<div class="manufactures">
 					<label>
-						<input type="checkbox" name="baxter" checked> Baxter of california
+						<input type="checkbox" name="baxter" checked> <span>Baxter of california</span> 
 					</label>
 					<label>
-						<input type="checkbox" name="natty"> Mr Natty
+						<input type="checkbox" name="natty"><span>Mr Natty</span> 
 					</label>
 					<label>
-						<input type="checkbox" name="suavecito" checked>Suavecito
+						<input type="checkbox" name="suavecito" checked><span>Suavecito</span> 
 					</label>	
 					<label>
-						<input type="checkbox" name="malin-goetz"> Malin-goetz
+						<input type="checkbox" name="malin-goetz"><span>Malin-goetz</span> 
 					</label>	
 					<label>
-						<input type="checkbox" name="murrays">Murray's
+						<input type="checkbox" name="murrays"><span>Murray's</span> 
 					</label>
 					<label>
-						<input type="checkbox" name="crew" checked> American crew
+						<input type="checkbox" name="crew" checked><span>American crew</span> 
 					</label>
 				</div>
 			<h2>Группы товаров</h2>
 				<div class="manufactures">
 					<label>
-						<input type="radio" name="shaving">Бритвенные принаддежности
+						<input type="radio" name="care">Бритвенные принаддежности
 					</label>
 					<label>
 						<input type="radio" name="care">Средства для ухода
 					</label>
 					<label>
-						<input type="radio" name="accessories">Аксессуары
+						<input type="radio" name="care">Аксессуары
 					</label>
 				</div>
 				<article class="product">
 					<a href="#">
-					<img src="img\product1.png" width="250" height="200px">
-						<div>
-							<span>Набор для путешествий "Baxter of California"</span>
-						</div>
-					</a>
-						<div>
-						<span>2900 руб.</span>
-						<button>Купить</button>
+						<img src="img/product1.png" width="250" height="200px">
+					<div class="name">
+						<p>Набор для путешествий "Baxter of California"</p>
 					</div>
+					</a>
+					<div class="price">
+						<span>2900 руб.</span>
+					</div>
+						<button>Купить</button>
 				</article>
 				<article class="product">
 					<a href="#">
-					<img src="img\product2.png" width="250" height="200px">
-						<div>
-							<span>Увлажняющий кондиционер "Baxter of California"</span>
-						</div>
+						<img src="img/product2.png" width="250" height="200px">
+					<div class="name">
+						<p>Увлажняющий кондиционер "Baxter of California"</p>
+					</div>
 					</a>
-						<div>
+					<div class="price">
 						<span>750 руб.</span>
+					</div>
 						<button>Купить</button>
-						</div>
 				</article>
 				<article class="product">
 					<a href="#">
-					<img src="img\product3.png" width="250" height="200px">
-						<div>
-							<span>Гель для волос "Suavexito"</span>
-						</div>
+						<img src="img/product3.png" width="250" height="200px">
+					<div class="name">
+						<p>Гель для волос "Suavexito"</p>
+					</div>
 					</a>
-						<div>
+					<div class="price">
 						<span>290 руб.</span>
+					</div>
 						<button>Купить</button>
-						</div>
-				</article>
 				</article>
 				<article class="product">
 					<a href="#">
-					<img src="img\product4.png" width="250" height="200px">
-						<div>
-							<span>Глина для укладки волос "American crew"</span>
-						</div>
+						<img src="img/product4.png" width="250" height="200px">
+					<div class="name">
+						<p>Глина для укладки волос "American crew"</p>
+					</div>
 					</a>
-						<div>
+					<div class="price">
 						<span>500 руб.</span>
+					</div>
 						<button>Купить</button>
-						</div>
-				</article>
 				</article>
 				<article class="product">
 					<a href="#">
-					<img src="img\product5.png" width="250" height="200px">
-						<div>
-							<span> Гель для волос "American crew"</span>
-						</div>
+						<img src="img/product5.png" width="250" height="200px">
+					<div class="name">
+						<p> Гель для волос "American crew"</p>
+					</div>
 					</a>
-						<div>
+					<div class="price">
 						<span>300 руб.</span>
+					</div>
 						<button>Купить</button>
-						</div>
 				</article>
-								<article class="product">
+				<article class="product">
 					<a href="#">
-					<img src="img\product6.png" width="250" height="200px">
-						<div>
-							<span> Набор для бритья "Baxter of California"</span>
-						</div>
+						<img src="img/product6.png" width="250" height="200px">
+					<div class="name">
+						<p> Набор для бритья "Baxter of California"</p>
+					</div>
 					</a>
-						<div>
+					<div class="price">
 						<span>3900 руб.</span>
+					</div>
 						<button>Купить</button>
-						</div>
 				</article>
 				<div>
 					<a href="#">1</a>
