--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 		<div class="container">
 			<div class="logo">
 				<a href="index.html">
-				<img src="img/logo.png" width="120" height="70px">
+					<img src="img/logo.png" width="120" height="70px">
 				</a>
 			</div>
 			<nav class="main-navigation">
@@ -46,34 +46,34 @@
 			<h2>Производители</h2>
 				<div class="manufactures">
 					<label>
-						<input type="checkbox" name="baxter" checked> <span>Baxter of california</span> 
+						<input type="checkbox" name="baxter" checked> <span class="name-of-manufactures">Baxter of california</span> 
 					</label>
 					<label>
-						<input type="checkbox" name="natty"><span>Mr Natty</span> 
+						<input type="checkbox" name="natty"><span class="name-of-manufactures">Mr Natty</span> 
 					</label>
 					<label>
-						<input type="checkbox" name="suavecito" checked><span>Suavecito</span> 
+						<input type="checkbox" name="suavecito" checked><span class="name-of-manufactures">Suavecito</span> 
 					</label>	
 					<label>
-						<input type="checkbox" name="malin-goetz"><span>Malin-goetz</span> 
+						<input type="checkbox" name="malin-goetz"><span class="name-of-manufactures">Malin-goetz</span> 
 					</label>	
 					<label>
-						<input type="checkbox" name="murrays"><span>Murray's</span> 
+						<input type="checkbox" name="murrays"><span class="name-of-manufactures">Murray's</span> 
 					</label>
 					<label>
-						<input type="checkbox" name="crew" checked><span>American crew</span> 
+						<input type="checkbox" name="crew" checked><span class="name-of-manufactures">American crew</span> 
 					</label>
 				</div>
 			<h2>Группы товаров</h2>
-				<div class="manufactures">
+				<div class="goods">
 					<label>
-						<input type="radio" name="care">Бритвенные принаддежности
+						<input type="radio" name="care"><span class="kind-of-goods">Бритвенные принаддежности</span> 
 					</label>
 					<label>
-						<input type="radio" name="care">Средства для ухода
+						<input type="radio" name="care"><span class="kind-of-goods">Средства для ухода</span> 
 					</label>
 					<label>
-						<input type="radio" name="care">Аксессуары
+						<input type="radio" name="care"><span class="kind-of-goods">Аксессуары</span> 
 					</label>
 				</div>
 				<article class="product">
