--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,24 +8,24 @@
 	<header class="main-header">
 		<div class="container">
 			<div class="logo">
-				<img src="img\logo.png" width="120" height="70px">
+				<img src="img/logo.png" width="120" height="70px">
 			</div>
 			<nav class="main-navigation">
 				<ul>
 					<li>
-					<a href="#">Информация</a>
+						<a href="#">Информация</a>
 					</li>
 					<li>
-					<a href="#">Новости</a> 
+						<a href="#">Новости</a> 
 					</li>
 					<li>
-					<a href="#">Прайс-лист</a>
+						<a href="#">Прайс-лист</a>
 					</li>
 					<li>
-					<a href="catalog.html">Магазин</a>
+						<a href="catalog.html">Магазин</a>
 					</li>
 					<li>
-					<a href="#">Контакты</a>
+						<a href="#">Контакты</a>
 					</li>
 				</ul>
 			</nav>	
@@ -35,22 +35,22 @@
 		</div>
 	</header>
 		<main class="container">
-			<div class="crumbs-item">
+			<div class="breadcrumbs-item">
 				<h1>Набор для путешествий "Baxter of California"</h1>
-				<div class="crumbs">
-					<a href="#">Главная</a>
-					<a href="#">Магазин</a>
+				<div class="breadcrumbs">
+					<a href="index.html">Главная</a>
+					<a href="catalog.html">Магазин</a>
 					<a href="#">Средства для ухода</a>
 					<span>Набор для путешествий "Baxter of California"</span>
 				</div>
 			</div>
 			<div class="img-main">
-				<img src=""img\product1.png" width="250" height="200">
+				<img src=""img/product1.png" width="250" height="200">
 			</div>
 			<div class="slider-img">
-				<img src="img\product1-view1.png" width="100" height="80">
-				<img src="img\product1-view2.png" width="100" height="80">
-				<img src="img\product1-view3.png" width="100" height="80">
+				<img src="img/product1-view1.png" width="100" height="80">
+				<img src="img/product1-view2.png" width="100" height="80">
+				<img src="img/product1-view3.png" width="100" height="80">
 			</div>
 			<div class="description">
 				<span>Есть в наличии</span>
