--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
 	</header>
 		<main class="container">
 			<h1>Средства для ухода</h1>
-				<div class="crumbs">
+				<div class="breadcrumbs">
 					<a href="#">Главная</a>
 					<a href="#">Магазин</a>
 					<span>Средства для ухода</span>>
@@ -75,6 +75,9 @@
 					<label>
 						<input type="radio" name="care"><span class="kind-of-goods">Аксессуары</span> 
 					</label>
+					<div>
+						<a href="#">Показать</a>
+					</div>
 				</div>
 				<article class="product">
 					<a href="#">
