--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Каталог товаров</title>
+	<link href="css/style.css" rel="stylesheet">
+<img src="img/logo.png" width="100" height="50" alt="Барбершоп">
 </head>
 <body>
 	<header class="main-header">
