--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,14 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>Карта товара</title>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	<header class="main-header">
-		<div class="container">
-			<div class="logo">
-				<img src="img/logo.png" width="120" height="70px">
-			</div>
-			<nav class="main-navigation">
+	<header class="main-header">	
+		<div class="container clearfix">
+			<nav class="main-navigator">
+				<div class="logo">
+					<a href="index.html">
+						<img src="img/logo.png" width="10" height="10">
+					</a>
+				</div>
 				<ul>
 					<li>
 						<a href="#">Информация</a>
@@ -28,13 +31,13 @@
 						<a href="#">Контакты</a>
 					</li>
 				</ul>
-			</nav>	
+			</nav>
 			<div class="user-block">
 				<a class="login" href="#"> Вход</a>
 			</div>
 		</div>
 	</header>
-		<main class="container">
+		<main class="container clearfix">
 			<div class="breadcrumbs-item">
 				<h1>Набор для путешествий "Baxter of California"</h1>
 				<div class="breadcrumbs">
@@ -44,36 +47,40 @@
 					<span>Набор для путешествий "Baxter of California"</span>
 				</div>
 			</div>
-			<div class="img-main">
-				<img src=""img/product1.png" width="250" height="200">
-			</div>
-			<div class="slider-img">
-				<img src="img/product1-view1.png" width="100" height="80">
-				<img src="img/product1-view2.png" width="100" height="80">
-				<img src="img/product1-view3.png" width="100" height="80">
-			</div>
+			<div class="img-container">
+				<div class="img-main">
+			 		<img src="img/product-view.png" width="460" height="500">
+				</div>
+				<div class="slider-img">
+					<img src="img/product1-view1.png" width="140" height="151">
+					<img src="img/product1-view2.png" width="140" height="151">
+					<img src="img/product1-view3.png" width="140" height="151">
+				</div>
+			</div>	
 			<div class="description">
-				<span>Есть в наличии</span>
-				<span class="article">Артикул: Dexter-AE</span> 
-				<p>Travel kit - необходимый аксессуар во время любого путешествия, в аккуратной кожанной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь, набор также может стать отличным подарком.</p>
-			</div>
-			<div>
-				<span>2900 руб.</span>
-				<button>Купить</button>
-			</div>
-			<div>
-				<span>В набор входят</span>
-				<ul>
-					<li>Средство для умывания (50мл)</li>
-					<li>Увлажняющий крем (50мл)</li>
-					<li>Крем для бритья (50мл)</li>
-					<li>Крем после бритья, шампунь (50мл)</li>
-					<li>Удобная кожанная косметичка</li>
-				</ul>
+				<div class="description-item">
+					<span>Есть в наличии</span>
+					<span class="article">Артикул: Dexter-AE</span> 
+					<p>Travel kit - необходимый аксессуар во время любого путешествия, в аккуратной кожанной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь, набор также может стать отличным подарком.</p>
+				</div>	
+				<div class="price">
+					<span>2900 руб.</span>
+					<a href="#">Купить</button>
+				</div>
+				<div class="include">
+					<span>В набор входят</span>
+					<ul>
+						<li>Средство для умывания (50мл)</li>
+						<li>Увлажняющий крем (50мл)</li>
+						<li>Крем для бритья (50мл)</li>
+						<li>Крем после бритья, шампунь (50мл)</li>
+						<li>Удобная кожанная косметичка</li>
+					</ul>
+				</div>
 			</div>
 		</main>
 		<footer class="main-footer">
-			<div class="container">
+			<div class="container clearfix">
 				<section class="footer-contacts">
 					<p>Барбершоп "Бородинский"
 					Адрес: Санкт-Петербург, Б.Конюшенная, д.19\8
