--- a/catalog.html
+++ b/catalog.html
@@ -4,17 +4,16 @@
 	<meta charset="utf-8">
 	<title>Каталог товаров</title>
 	<link href="css/style.css" rel="stylesheet">
-<img src="img/logo.png" width="100" height="50" alt="Барбершоп">
 </head>
 <body>
 	<header class="main-header">
-		<div class="container">
-			<div class="logo">
-				<a href="index.html">
-					<img src="img/logo.png" width="120" height="70px">
-				</a>
-			</div>
-			<nav class="main-navigation">
+		<div class="container clearfix">
+			<nav class="main-navigator">
+				<div class="logo">
+					<a href="index.html">
+						<img src="img/logo.png" width="10" height="10">
+					</a>
+				</div>
 				<ul>
 					<li>
 						<a href="#">Информация</a>
@@ -26,7 +25,7 @@
 						<a href="#">Прайс-лист</a>
 					</li>
 					<li>
-						<span>Магазин</span>>
+						<span>Магазин</span>
 					</li>
 					<li>
 						<a href="#">Контакты</a>
@@ -38,15 +37,18 @@
 			</div>
 		</div>
 	</header>
-		<main class="container">
-			<h1>Средства для ухода</h1>
-				<div class="breadcrumbs">
-					<a href="#">Главная</a>
-					<a href="#">Магазин</a>
-					<span>Средства для ухода</span>>
-				</div>
-			<h2>Производители</h2>
-				<div class="manufactures">
+		<main class="container clearfix">
+			<div class="breadcrumbs-item">
+				<h1>Средства для ухода</h1>
+					<div class="breadcrumbs">
+						<a href="index.html">Главная</a>
+						<a href="#">Магазин</a>
+						<span>Средства для ухода</span>
+					</div>
+			</div>		
+			<div class="manufactures">
+				<div class="manufactures-item">
+					<h2>Производители</h2>
 					<label>
 						<input type="checkbox" name="baxter" checked> <span class="name-of-manufactures">Baxter of california</span> 
 					</label>
@@ -66,7 +68,7 @@
 						<input type="checkbox" name="crew" checked><span class="name-of-manufactures">American crew</span> 
 					</label>
 				</div>
-			<h2>Группы товаров</h2>
+				<h2>Группы товаров</h2>
 				<div class="goods">
 					<label>
 						<input type="radio" name="care"><span class="kind-of-goods">Бритвенные принаддежности</span> 
@@ -81,9 +83,11 @@
 						<a href="#">Показать</a>
 					</div>
 				</div>
+			</div>	
+			<div class="product-item">
 				<article class="product">
 					<a href="#">
-						<img src="img/product1.png" width="250" height="200px">
+						<img src="img/product1.png" width="220" height="200px">
 					<div class="name">
 						<p>Набор для путешествий "Baxter of California"</p>
 					</div>
@@ -91,11 +95,11 @@
 					<div class="price">
 						<span>2900 руб.</span>
 					</div>
-						<button>Купить</button>
+						<a href="#"><button>Купить</button></a>
 				</article>
 				<article class="product">
 					<a href="#">
-						<img src="img/product2.png" width="250" height="200px">
+						<img src="img/product2.png" width="220" height="200px">
 					<div class="name">
 						<p>Увлажняющий кондиционер "Baxter of California"</p>
 					</div>
@@ -103,11 +107,11 @@
 					<div class="price">
 						<span>750 руб.</span>
 					</div>
-						<button>Купить</button>
+						<a href="#"><button>Купить</button></a>
 				</article>
 				<article class="product">
 					<a href="#">
-						<img src="img/product3.png" width="250" height="200px">
+						<img src="img/product3.png" width="220" height="200px">
 					<div class="name">
 						<p>Гель для волос "Suavexito"</p>
 					</div>
@@ -115,11 +119,11 @@
 					<div class="price">
 						<span>290 руб.</span>
 					</div>
-						<button>Купить</button>
+						<a href="#"><button>Купить</button></a>
 				</article>
 				<article class="product">
 					<a href="#">
-						<img src="img/product4.png" width="250" height="200px">
+						<img src="img/product4.png" width="220" height="200px">
 					<div class="name">
 						<p>Глина для укладки волос "American crew"</p>
 					</div>
@@ -127,11 +131,11 @@
 					<div class="price">
 						<span>500 руб.</span>
 					</div>
-						<button>Купить</button>
+						<a href="#"><button>Купить</button></a>
 				</article>
 				<article class="product">
 					<a href="#">
-						<img src="img/product5.png" width="250" height="200px">
+						<img src="img/product5.png" width="220" height="200px">
 					<div class="name">
 						<p> Гель для волос "American crew"</p>
 					</div>
@@ -139,11 +143,11 @@
 					<div class="price">
 						<span>300 руб.</span>
 					</div>
-						<button>Купить</button>
+						<a href="#"><button>Купить</button></a>
 				</article>
 				<article class="product">
 					<a href="#">
-						<img src="img/product6.png" width="250" height="200px">
+						<img src="img/product6.png" width="220" height="200px">
 					<div class="name">
 						<p> Набор для бритья "Baxter of California"</p>
 					</div>
@@ -151,9 +155,10 @@
 					<div class="price">
 						<span>3900 руб.</span>
 					</div>
-						<button>Купить</button>
+						<a href="#"><button>Купить</button></a>
 				</article>
-				<div>
+			</div>	
+				<div class="pages">
 					<a href="#">1</a>
 					<a href="#">2</a>
 					<a href="#">3</a>
@@ -161,7 +166,7 @@
 				</div>
 		</main>
 		<footer class="main-footer">
-			<div class="container">
+			<div class="container clearfix">
 				<section class="footer-contacts">
 					<p>Барбершоп "Бородинский"<br>
 					Адрес: Санкт-Петербург, Б.Конюшенная, д.19\8<br>
